fixed header title text to stay white on mobile in jquery

--- a/css/Index.css
+++ b/css/Index.css
@@ -81,7 +81,7 @@ p {
 
 .navbar-custom .navbar-toggle {
   color: white;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: black;
   font-size: 12px;
 }
 .navbar-custom .navbar-toggle:focus,
@@ -200,11 +200,18 @@ p {
   .intro .intro-body .intro-text {
     font-size: 26px;
   }
-/*wierd white gap on side was coming from bootstrap row*/
 
- 
+#textfront{
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 
+.navbar-custom a{
+  color: black;
+}
+ 
+}
+/*wierd white gap on right side was coming from bootstrap row*/
  .row {
   padding-right: 0px;
   margin-right: 0px;
